External foundations + Unified Types (Bridge) + DSL/CLI rework + site & build overhaul
A single chunk of work that pulls in many layers at once. Each piece
forced the next, so they ended up squashed into one commit. The pieces:

------------------------------------------------------------------------
1. foundations becomes an external published artifact (RC6)
------------------------------------------------------------------------

`foundations-jdbc` and its dsl/hikari/scala/kotlin wrappers used to be
in-repo bleep projects. They're now published as
`dev.typr.foundations:foundations-jdbc{,-kotlin,-scala_3,-hikari}:1.0.0-RC6-SNAPSHOT`,
and the in-repo modules are deleted. This is the kernel that everything
else hangs off.

Foundations itself reshaped on the way out:
  - `Connection` (writable) is split from `ConnectionRead` (read-only).
  - `Operation` and `OperationRead` form a sealed hierarchy.
    `OperationRead` declares `run(ConnectionRead)` and overrides
    `run(Connection)` so Scala 3's overload resolver picks the
    most-specific candidate without ambiguity.
  - Kotlin wrapper exposes `Bijection.of` publicly and exposes
    `Connection.javaConnection` (was `internal`) so typr-dsl-kotlin
    can unwrap when delegating.

------------------------------------------------------------------------
2. Codegen rewrite (DbLibFoundations + adapters)
------------------------------------------------------------------------

`DbLibFoundations.scala` (~2400 LOC) is rewritten around the
Connection/ConnectionRead split:
  - Read methods: `(using c: ConnectionRead)`; write methods:
    `(using c: Connection)`.
  - A single `runOn(connParam)` helper emits `.run(using c)` for
    Scala / `.run(c)` for Java/Kotlin via `jvm.ApplyNullary`.
  - `dbTypeArray` now generated as `pgType.array()` (PG) or
    `duckDbType.list()` (DuckDB) — the inner Bijection is reused
    instead of duplicated. `pgType` is emitted before `pgTypeArray`
    to satisfy Java's static-field forward-referenc